test/test_cases/invalid/syntaxErr/variables/reservedWords4.ast
-- Test: reservedWords4.wacc

-- Uploaded file: 
---------------------------------------------------------------
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  bool null = true
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:7 -- no viable alternative at input 'boolnull'
1 parser error(s) detected, no further compilation attempted.

